--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,26 @@
           </execution>
         </executions>
       </plugin>
+     <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-javadoc-plugin</artifactId>
+      <version>2.9.1</version>
+      <configuration>
+        <quiet>true</quiet>
+        <nonavbar>true</nonavbar>
+        <notree>true</notree>
+        <nocomment>true</nocomment>
+        <nohelp>true</nohelp>
+      </configuration>
+      <executions>
+        <execution>
+          <id>attach-javadocs</id>
+          <goals>
+            <goal>jar</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
